fix  修复vue-router history模式

--- a/排坑笔记.md
+++ b/排坑笔记.md
@@ -1,7 +1,8 @@
 1、yarn 无法安装 element-ui
 [https://blog.csdn.net/weixin_42614080/article/details/107052787](node-sass无法安装，被墙)
 
-2、Module parse failed: Unexpected character '@' (1:0) You may need an appropriate loader to handle （没有适合css的loader）
+2、Module parse failed: Unexpected character '@' (1:0) You may need an appropriate loader to handle （没有适合 css 的 loader）
+
 ```js
 {
     test: /\.(less|css)$/,
@@ -9,3 +10,15 @@
 }
 ```
 
+3、使用 vue-router `history` 模式，无法正确匹配到路径
+[https://blog.csdn.net/qq_15902869/article/details/79745070](Vue-router本地服务器使用history出现找不到页面的问题解决方法)
+
+```json
+
+// --history-api-fallback 添加这句话就可以
+
+"scripts": {
+    "build": "webpack --config ./webpack.prod.js",
+    "dev": "webpack-dev-server --config ./webpack.dev.js --history-api-fallback"
+},
+```
