fix 自动注入 bundle.js 失败

--- a/排坑笔记.md
+++ b/排坑笔记.md
@@ -22,3 +22,16 @@
     "dev": "webpack-dev-server --config ./webpack.dev.js --history-api-fallback"
 },
 ```
+
+4、自动注入 bundle.js 失败（404）
+[https://blog.csdn.net/u012149906/article/details/105992270](使用html-webpack-plugin自动引入js的路径的问题)
+
+```js
+{
+    output: {
+        publicPath: '/',    // 间接资源的请求位置
+        filename: 'bound.js',
+        path: path.resolve(__dirname, './dist') // 打包资源的输出位置
+    },
+}
+```
