菜单栏处理

--- a/排坑笔记.md
+++ b/排坑笔记.md
@@ -1,5 +1,5 @@
 1、yarn 无法安装 element-ui
-[https://blog.csdn.net/weixin_42614080/article/details/107052787](node-sass无法安装，被墙)
+[node-sass 无法安装，被墙](https://blog.csdn.net/weixin_42614080/article/details/107052787)
 
 2、Module parse failed: Unexpected character '@' (1:0) You may need an appropriate loader to handle （没有适合 css 的 loader）
 
@@ -11,7 +11,7 @@
 ```
 
 3、使用 vue-router `history` 模式，无法正确匹配到路径
-[https://blog.csdn.net/qq_15902869/article/details/79745070](Vue-router本地服务器使用history出现找不到页面的问题解决方法)
+[Vue-router 本地服务器使用 history 出现找不到页面的问题解决方法](https://blog.csdn.net/qq_15902869/article/details/79745070)
 
 ```json
 
