--- a/排坑笔记.md
+++ b/排坑笔记.md
@@ -35,3 +35,16 @@
     },
 }
 ```
+
+5、git 提交报错 443
+
+`OpenSSL SSL_connect: SSL_ERROR_SYSCALL in connection to github.com:443`
+
+原因：是 Git 的 Http 代理的问题，Git 支持三种协议：git://、ssh:// 和 http://，本来push的时候应该走ssh隧道的，但是因为设置了http代理，所以就走了http的代理，于是就提交不了了。
+
+```bash
+# 调用下面命令即可
+git config --global --unset http.proxy
+```
+
+[https://blog.csdn.net/weixin_42125310/article/details/106212710](原文链接)
