与后台仓库测试接口互通

--- a/排坑笔记.md
+++ b/排坑笔记.md
@@ -45,6 +45,7 @@
 ```bash
 # 调用下面命令即可
 git config --global --unset http.proxy
+git config --global --unset https.proxy
 ```
 
 [https://blog.csdn.net/weixin_42125310/article/details/106212710](原文链接)
